--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,4 +9,6 @@ RUN ln -s /usr/local/bin/entrypoint.sh /entrypoint.sh
 RUN chmod +x /usr/local/bin/faketsdb
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
+RUN rm -rf /etc/localtime && ln -s /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+
 CMD [ "/entrypoint.sh" ]
